[package]
name = "banana-primitives"
version = "0.1.0"
authors = ["Francis Hor <francishor@outlook.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../vendor/frontier/vendor/substrate/frame/system" }
sp-application-crypto = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/application-crypto" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/core" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/runtime" }

[dev-dependencies]
sp-serializer = { version = "2.0.0-dev", path = "../vendor/frontier/vendor/substrate/primitives/serializer" }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]