[package]
name = "banana-runtime"
version = "0.1.0-dev"
authors = ["Francis Hor <francishor@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://connesis.com"
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"

pallet-aura = { version = "2.0.0-dev", default-features = false, package = "pallet-aura", path = "../vendor/frontier/vendor/substrate/frame/aura" }
pallet-balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", path = "../vendor/frontier/vendor/substrate/frame/balances" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/support" }
pallet-grandpa = { version = "2.0.0-dev", default-features = false, package = "pallet-grandpa", path = "../vendor/frontier/vendor/substrate/frame/grandpa" }
pallet-randomness-collective-flip = { version = "2.0.0-dev", default-features = false, package = "pallet-randomness-collective-flip", path = "../vendor/frontier/vendor/substrate/frame/randomness-collective-flip" }
pallet-sudo = { version = "2.0.0-dev", default-features = false, package = "pallet-sudo", path = "../vendor/frontier/vendor/substrate/frame/sudo" }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../vendor/frontier/vendor/substrate/frame/system" }
pallet-timestamp = { version = "2.0.0-dev", default-features = false, package = "pallet-timestamp", path = "../vendor/frontier/vendor/substrate/frame/timestamp" }
pallet-transaction-payment = { version = "2.0.0-dev", default-features = false, package = "pallet-transaction-payment", path = "../vendor/frontier/vendor/substrate/frame/transaction-payment" }
frame-ethereum = { version = "0.1.0", default-features = false, package = "pallet-ethereum", path = "../vendor/frontier/frame/ethereum" }
frame-evm = { version = "2.0.0-dev", default-features = false, package = "pallet-evm", path = "../vendor/frontier/vendor/substrate/frame/evm" }
frame-executive = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/executive" }
serde = { version = "1.0.102", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/api" }
sp-block-builder = { path = "../vendor/frontier/vendor/substrate/primitives/block-builder", default-features = false, version = "2.0.0-dev"}
sp-consensus-aura = { version = "0.8.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/consensus/aura" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/core" }
sp-inherents = { path = "../vendor/frontier/vendor/substrate/primitives/inherents", default-features = false, version = "2.0.0-dev"}
sp-io = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/io" }
sp-offchain = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/offchain" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/runtime" }
sp-session = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/session" }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/std" }
sp-transaction-pool = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/transaction-pool" }
sp-version = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/version" }
frame-system-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/system/rpc/runtime-api/" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/transaction-payment/rpc/runtime-api/" }
frontier-rpc-primitives = { default-features = false, path = "../vendor/frontier/rpc/primitives" }

pallet-session = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/session", features = ["historical"] }
pallet-im-online = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/im-online" }
sp-authority-discovery = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/authority-discovery" }
sp-staking = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/primitives/staking" }
pallet-staking = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/staking" }
pallet-staking-reward-curve = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/staking/reward-curve" }
node-primitives = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/bin/node/primitives" }
pallet-authorship = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/authorship" }
pallet-utility = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/utility" }
pallet-multisig = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/multisig" }
pallet-democracy = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/democracy" }
pallet-elections-phragmen = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/elections-phragmen" }
pallet-recovery = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/recovery" }
pallet-vesting = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/vesting" }
pallet-scheduler = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/scheduler" }
pallet-indices = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/indices" }
pallet-treasury = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/treasury" }
pallet-collective = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/collective" }
pallet-offences = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/offences" }
pallet-finality-tracker = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/finality-tracker" }
pallet-identity = { version = "2.0.0-dev", default-features = false, path = "../vendor/frontier/vendor/substrate/frame/identity" }

signaling = { package = "edge-signaling", path = "../modules/edge-signaling", default-features = false }
treasury-reward = { package = "edge-treasury-reward", path = "../modules/edge-treasury-reward", default-features = false }
voting = { package = "edge-voting", path = "../modules/edge-voting", default-features = false }

# banana primitives
banana-primitives = { path = "../primitives", default-features = false }

pallet-banana = { path = "../pallets/pallet-banana", default-features = false }
validator-set = { path = "../pallets/validator-set", default-features = false }

[build-dependencies]
wasm-builder-runner = { version = "1.0.5", package = "substrate-wasm-builder-runner", path = "../vendor/frontier/vendor/substrate/utils/wasm-builder-runner" }

[features]
default = ["std"]
std = [
	"pallet-aura/std",
	"pallet-balances/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-sudo/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"frame-ethereum/std",
	"frame-evm/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"frontier-rpc-primitives/std",
	"pallet-session/std",
	"pallet-im-online/std",
	"sp-authority-discovery/std",
	"sp-staking/std",
	"pallet-staking/std",
	"node-primitives/std",
	"pallet-authorship/std",
	"pallet-utility/std",
	"pallet-multisig/std",
	"pallet-democracy/std",
	"pallet-elections-phragmen/std",
	"pallet-recovery/std",
	"pallet-vesting/std",
	"pallet-scheduler/std",
	"pallet-indices/std",
	"pallet-treasury/std",
	"pallet-collective/std",
	"pallet-offences/std",
	"pallet-finality-tracker/std",
	"pallet-identity/std",
	"signaling/std",
	"treasury-reward/std",
	"voting/std",
	"pallet-banana/std",
	"validator-set/std",

]
