[package]
name = "edge-signaling"
version = "1.0.0"
authors = ["Jake Naviasky <jake@commonwealth.im>, Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/std" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/runtime" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../../vendor/frontier/vendor/substrate/frame/system" }
pallet-balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", path = "../../vendor/frontier/vendor/substrate/frame/balances" }
voting = { package ="edge-voting", path = "../edge-voting", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/io" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"voting/std",
]
