[package]
name = "edge-treasury-reward"
version = "1.0.0"
authors = ["drewstone <drewstone329@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/std" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/runtime" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../../vendor/frontier/vendor/substrate/frame/system" }

pallet-staking = { version = "2.0.0-dev", default-features = false, package = "pallet-staking", path = "../../vendor/frontier/vendor/substrate/frame/staking" }
pallet-balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", path = "../../vendor/frontier/vendor/substrate/frame/balances" }
pallet-treasury = { version = "2.0.0-dev", default-features = false, package = "pallet-treasury", path = "../../vendor/frontier/vendor/substrate/frame/treasury" }

[dev-dependencies]
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/io" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }
sp-staking = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/staking" }
pallet-staking-reward-curve = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/staking/reward-curve" }
pallet-session = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/session" }
pallet-timestamp = { version = "2.0.0-dev", default-features = false, package = "pallet-timestamp", path = "../../vendor/frontier/vendor/substrate/frame/timestamp" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"pallet-balances/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-staking/std",
	"pallet-treasury/std",
]
