[package]
name = "edge-voting"
version = "1.0.0"
authors = ["Drew Stone <drew@commonwealth.im>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/std" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/runtime" }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, package = "frame-system", path = "../../vendor/frontier/vendor/substrate/frame/system" }
pallet-balances = { version = "2.0.0-dev", default-features = false, package = "pallet-balances", path = "../../vendor/frontier/vendor/substrate/frame/balances" }

[dev-dependencies]
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/io" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }

[features]
default = ["std"]
std = [
	"serde",
	"safe-mix/std",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
