[package]
authors = ['Francis Hor <francishor@outlook.com>']
description = 'Pallet Banana'
edition = '2018'
homepage = 'https://connesis.com'
license = 'Unlicensed'
name = 'pallet-banana'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/system" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/io" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../..//vendor/frontier/vendor/substrate/primitives/runtime" }

[dev-dependencies]
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]

