[package]
authors = ['Francis Hor <francishor@outlook.com>']
description = 'Validator Set'
edition = '2018'
homepage = 'https://connesis.com'
license = 'Apache-2.0'
name = 'validator-set'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.102", optional = true, features = ["derive"] }

codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/support" }
frame-system = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/system" }
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }
sp-io = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/io" }
sp-runtime = { version = "2.0.0-dev", default-features = false, path = "../..//vendor/frontier/vendor/substrate/primitives/runtime" }
sp-std = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/std" }
pallet-session = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/frame/session" }



[dev-dependencies]
sp-core = { version = "2.0.0-dev", default-features = false, path = "../../vendor/frontier/vendor/substrate/primitives/core" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'serde',
    'pallet-session/std',
]

